Release notes for SIP Express Router (ser)
***********************************************

$Id: NEWS,v 1.84 2008/06/24 14:39:52 andrei Exp $



2.1.0 changes

modules:
 - textops   - functions:
                        - remove_hf_re("regexp") -- filter message headers out
                          by matching the header name field against a regular
                          expression.
 - avp       - export new selects table to allow dissecting the content of an
               attribute by interpreting it as a "name-addr" value 
 - auth      - added extra authentication checks support, to protect
               against various reply attacks.
             - params:
                       - auth_extra_checks - flags specifying which extra
                          message part/parts will be checked for change before
                          allowing nonce reuse. See the auth module docs for
                          for more information (modules/auth/README).
 - blst      - new module containing script blacklist manipulations functions
               (the source of a message can be blacklisted, removed from the
                blacklist or checked for presence in the blacklist).
 - tm        - added t_reset_fr(), t_reset_retr(), t_reset_max_lifetime()
             - t_relay_to renamed to t_relay_to_avp (undocumented function)
             - t_relay() can now also take host and port parameters (e.g.
               t_relay(host, port)), behaving like a statefull 
               forwad(host, port) version (forward to host:port using the same
               protocol on which the message was received)
             - t_relay_to_udp(), t_relay_to_tcp() and t_relay_to_tls() work
               now even with no parameters: in this case the message is 
               forwarded using the request uri, but with the specified protocol
               (equivalent to a t_relay() with a forced protocol)
             - method for canceling unreplied branches can now be selected