@@ -1,6 +1,6 @@
 
 #
-# $Id: Makefile.targets,v 1.1 2008/06/26 09:07:35 andrei Exp $
+# $Id: Makefile.targets,v 1.2 2008/06/28 00:35:25 andrei Exp $
 #
 #
 # Makefile targets that should be treated specially, 
@@ -17,8 +17,8 @@ clean_targets:=	clean proper distclean realclean mantainer-clean clean_libs
 doc_targets:=	modules-doc modules-readme README modules-man man \
 		install-doc install-modules-doc install-man
 # auxiliary: maintance, debugging, etc. (don't affect code/objects)
-aux_targets:=	TAGS tar dist print-modules dbg dbinstall \
-		librpath.lst makecfg.lst
+aux_targets:=	TAGS tar dist cfg config config.mak print-modules dbg \
+		dbinstall librpath.lst makecfg.lst
 # other targets that don't produce code in the current directory ("external")
 ext_targets:=	modules libs utils \
 		install-cfg install-modules install-utils  install-modules-all \
