@@ -1,7 +1,7 @@
 Release notes for SIP Express Router (ser)
 ***********************************************
 
-$Id: NEWS,v 1.84 2008/06/24 14:39:52 andrei Exp $
+$Id: NEWS,v 1.85 2008/06/28 00:35:25 andrei Exp $
 
 
 
@@ -267,6 +267,14 @@ build system:
    force rebuilding everything in the current dir (creates a new file: 
    makecfg.lst that stores the compile defines & includes used at compile 
    time)
+ - make cfg / config support: store the build config in an autogenerated file 
+   (config.mak) and use it for future compiles (e.g.: 
+   make cfg include_modules=mysql skip_modules=print CPU=pentium-m; make all).
+   Main advantages are easier usage and faster builds (e.g. make proper is
+    +16 times faster, make clean ~9 times, make with previously generated
+    config is 2.6 times faster and a make that has nothing to do is ~9 times
+    faster).
+
 
 
 
